# movie-recommendation

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: unittest.yml
app/: __init__.py  models.py  movies.py  serializer.py
migrations/versions/: 2432893cda57_.py  27908454ff96_.py  e5daf0d64dc2_.py
tests/: flask_base_test_case.py  test_movie.py  test_system_movie.py  test_unit_movies.py
tests/integration/movie-recomendation/features/: environment.py
tests/integration/movie-recomendation/helpers/: constants.py
tests/integration/movie_recomendation/features/: environment.py
tests/unittests/: test_system_movie.py
